Opened 15 years ago
Closed 15 years ago
#3141 closed bug (fixed)
flock does not check the operation argument for validity
Reported by: | bhaible | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/pre-alpha1 |
Keywords: | Cc: | olive@… | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
The flock() function does not return an error code when the operation argument is invalid. In the attached sample program a shared and exclusive lock is requested - obviously nonsense, but the BeOS implementation does not reject it.
Expected output: -1 and the value of EINVAL Actual output: 0 0
flock() is not specified by POSIX, therefore one has to look at the manual pages of some systems, such as Linux
http://www.kernel.org/doc/man-pages/online/pages/man2/flock.2.html
or NetBSD
Attachments (2)
Change History (5)
by , 15 years ago
Attachment: | flock-bug.c added |
---|
by , 15 years ago
Attachment: | haiku-flock-bug.png added |
---|
comment:1 by , 15 years ago
Cc: | added |
---|
comment:3 by , 15 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
test case