* _user_flock() will no longer accept invalid operations, thus fixing bug #3141.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28889 a95241bf-73f2-0310-859d-f6bbb57e9c96